--- a/package.json
+++ b/package.json
@@ -7,28 +7,35 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "husky": "1.3.1",
+    "json-server": "^0.16.3",
     "lint-staged": "8.1.5",
     "react": "^17.0.2",
     "react-datepicker": "^4.2.1",
     "react-dom": "^17.0.2",
     "react-flexbox-grid": "^2.1.2",
     "react-html-parser": "^2.0.2",
+    "react-native-animated-switch": "^1.1.10",
     "react-redux": "^7.2.4",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-router-transition": "^1.4.0",
+    "react-router-transition": "^2.1.0",
     "react-scripts": "4.0.3",
-    "redux": "^4.1.0",
+    "redux": "^4.1.1",
     "redux-devtools-extension": "^2.13.9",
     "sass": "^1.35.1",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "webpack-dev-server": "^3.11.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "npm-run-all -p server:*",
+    "server:api": "node server.js",
+    "server:dev": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint src/"
+    "lint": "eslint src/",
+    "test": "jest --colors",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage --colors"
   },
   "husky": {
     "hooks": {
@@ -55,5 +62,18 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.12.1",
+    "eslint": "^7.32.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest-css-modules": "^2.0.0",
+    "jest-environment-jsdom-fourteen": "^0.1.0",
+    "jest-prop-type-error": "^1.1.0",
+    "jest-resolve": "^24.8.0",
+    "jest-watch-typeahead": "^0.3.1",
+    "npm-run-all": "^4.1.5",
+    "react-test-renderer": "^16.8.6"
   }
 }
